--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -6,6 +6,7 @@
 @import "components/connection/signInForm";
 @import "components/profile/photoUploaderCard";
 @import "components/profile/modifyForm";
+@import "components/profile/tagsPopUp";
 
 // Pages
 @import "pages/connection";
