--- a/client/src/styles/components/profile/_photoUploaderCard.scss
+++ b/client/src/styles/components/profile/_photoUploaderCard.scss
@@ -1,5 +1,6 @@
 .photo-uploader-card {
-	width: 20vh;
+	width: 17vw;
+	height: 17vw;
 
 	.image-container {
 		position: relative;
@@ -7,9 +8,9 @@
 
 		img {
 			border-radius: 10px;
-			width: 95%;
-			height: 95%;
-			object-fit: contain; /* Utilisez 'cover', 'contain', ou d'autres valeurs selon vos besoins */
+			width: 16vw;
+			height: 16vw;
+			object-fit: fill;
 		}
 
 		.delete-btn,
@@ -20,12 +21,13 @@
 			color: white;
 			border: none;
 			border-radius: 50%;
-			width: 15%;
-			height: 15%;
+			width: 2vw;
+			height: 2vw;
 			cursor: pointer;
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			font-size: 1em;
 		}
 
 		.delete-btn {
@@ -34,6 +36,50 @@
 
 		.add-btn {
 			background-color: green;
+		}
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.photo-uploader-card {
+		width: 17vh;
+		height: 17vh;
+
+		.image-container {
+			position: relative;
+			height: 100%;
+
+			img {
+				border-radius: 10px;
+				width: 16vh;
+				height: 16vh;
+				object-fit: fill;
+			}
+
+			.delete-btn,
+			.add-btn {
+				position: absolute;
+				bottom: 0;
+				right: 0;
+				color: white;
+				border: none;
+				border-radius: 50%;
+				width: 2vh;
+				height: 2vh;
+				cursor: pointer;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				font-size: 1em;
+			}
+
+			.delete-btn {
+				background-color: red;
+			}
+
+			.add-btn {
+				background-color: green;
+			}
 		}
 	}
 }
