--- a/client/src/styles/components/profile/_tagsPopUp.scss
+++ b/client/src/styles/components/profile/_tagsPopUp.scss
@@ -33,10 +33,12 @@
 			background-color: red;
 			right: 0;
 			border: none;
-			width: 2%;
-			height: 5%;
+			width: 2vw;
+			height: 2vw;
 			border-radius: 50%;
 			cursor: pointer;
+			color: white;
+			font-size: 1em;
 		}
 
 		.tags {
