--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -7,6 +7,7 @@
 @import "components/profile/photoUploaderCard";
 @import "components/profile/modifyForm";
 @import "components/profile/tagsPopUp";
+@import "components/profile/preview";
 
 // Pages
 @import "pages/connection";
